--- a/Astro/Controllers/APODFeed/Cells/APODEntryCell/APODTableViewCell.xib
+++ b/Astro/Controllers/APODFeed/Cells/APODEntryCell/APODTableViewCell.xib
@@ -9,68 +9,75 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="APODTableViewCell" rowHeight="372" id="KGk-i7-Jjw" customClass="APODTableViewCell" customModule="Astro" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="APODTableViewCell" rowHeight="414" id="KGk-i7-Jjw" customClass="APODTableViewCell" customModule="Astro" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="414"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="414"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="web-5Y-Tzr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GQm-Km-hCn">
+                        <rect key="frame" x="0.0" y="50" width="320" height="224"/>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAY-EH-lN3" userLabel="Button Container">
+                        <rect key="frame" x="0.0" y="394" width="320" height="20"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIe-BE-rw8">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6J-lf-kqI">
+                                <rect key="frame" x="150" y="0.0" width="20" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="v8H-Ey-ekI"/>
+                                    <constraint firstAttribute="width" constant="20" id="aMl-k4-E4i"/>
+                                    <constraint firstAttribute="height" constant="20" id="mLE-f5-V14"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GQm-Km-hCn">
-                                <rect key="frame" x="0.0" y="50" width="320" height="182"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explanation" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BD2-0z-Omc">
-                                <rect key="frame" x="0.0" y="232" width="320" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="CUV-nV-KfA"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAY-EH-lN3" userLabel="Button Container">
-                                <rect key="frame" x="0.0" y="352" width="320" height="20"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6J-lf-kqI">
-                                        <rect key="frame" x="150" y="0.0" width="20" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="20" id="aMl-k4-E4i"/>
-                                            <constraint firstAttribute="height" constant="20" id="mLE-f5-V14"/>
-                                        </constraints>
-                                        <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Button" image="down-arrow"/>
-                                        <connections>
-                                            <action selector="expandButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="XhE-BW-LE7"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstItem="O6J-lf-kqI" firstAttribute="centerX" secondItem="EAY-EH-lN3" secondAttribute="centerX" id="4jd-Cn-e89"/>
-                                    <constraint firstItem="O6J-lf-kqI" firstAttribute="top" secondItem="EAY-EH-lN3" secondAttribute="top" id="5vc-Ed-YWR"/>
-                                    <constraint firstAttribute="height" constant="20" id="KMb-Ah-YsG"/>
-                                </constraints>
-                            </view>
+                                <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button" image="down-arrow"/>
+                                <connections>
+                                    <action selector="expandButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="XhE-BW-LE7"/>
+                                </connections>
+                            </button>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="O6J-lf-kqI" firstAttribute="centerX" secondItem="EAY-EH-lN3" secondAttribute="centerX" id="4jd-Cn-e89"/>
+                            <constraint firstItem="O6J-lf-kqI" firstAttribute="top" secondItem="EAY-EH-lN3" secondAttribute="top" id="5vc-Ed-YWR"/>
+                            <constraint firstAttribute="height" constant="20" id="KMb-Ah-YsG"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="c3Z-Ch-ZeX"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIe-BE-rw8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="W9N-mg-qYo"/>
+                            <constraint firstAttribute="height" constant="50" id="v8H-Ey-ekI"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explanation" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BD2-0z-Omc">
+                        <rect key="frame" x="0.0" y="274" width="320" height="120"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="120" id="CUV-nV-KfA"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="120" id="aWR-fa-UMa"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="web-5Y-Tzr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Nnu-yC-nYS"/>
-                    <constraint firstItem="web-5Y-Tzr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="bFo-5W-V7k"/>
-                    <constraint firstAttribute="bottom" secondItem="web-5Y-Tzr" secondAttribute="bottom" id="cpN-DF-jyG"/>
-                    <constraint firstAttribute="trailing" secondItem="web-5Y-Tzr" secondAttribute="trailing" id="s4D-5m-h2v"/>
+                    <constraint firstAttribute="trailing" secondItem="GQm-Km-hCn" secondAttribute="trailing" id="0e1-cb-cgp"/>
+                    <constraint firstItem="BD2-0z-Omc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8qB-ff-gtG"/>
+                    <constraint firstItem="EAY-EH-lN3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="DgT-3I-Mcc"/>
+                    <constraint firstAttribute="trailing" secondItem="BD2-0z-Omc" secondAttribute="trailing" id="Fbh-V9-VRW"/>
+                    <constraint firstAttribute="trailing" secondItem="yIe-BE-rw8" secondAttribute="trailing" id="KiY-tk-Utr"/>
+                    <constraint firstItem="GQm-Km-hCn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OTb-LR-1oN"/>
+                    <constraint firstItem="yIe-BE-rw8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="e3d-Wa-H3g"/>
+                    <constraint firstItem="yIe-BE-rw8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hkd-OE-zzA"/>
+                    <constraint firstAttribute="trailing" secondItem="EAY-EH-lN3" secondAttribute="trailing" id="lkd-pS-3zc"/>
+                    <constraint firstItem="GQm-Km-hCn" firstAttribute="top" secondItem="yIe-BE-rw8" secondAttribute="bottom" id="nhe-wd-Hfc"/>
+                    <constraint firstItem="EAY-EH-lN3" firstAttribute="top" secondItem="BD2-0z-Omc" secondAttribute="bottom" id="qfh-EF-oAQ"/>
+                    <constraint firstItem="BD2-0z-Omc" firstAttribute="top" secondItem="GQm-Km-hCn" secondAttribute="bottom" id="tmO-GK-9Ip"/>
+                    <constraint firstAttribute="bottom" secondItem="EAY-EH-lN3" secondAttribute="bottom" id="xPJ-lF-VOH"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -80,7 +87,7 @@
                 <outlet property="explanationLabel" destination="BD2-0z-Omc" id="vRj-4v-fEJ"/>
                 <outlet property="titleLabel" destination="yIe-BE-rw8" id="dQy-RZ-Fcg"/>
             </connections>
-            <point key="canvasLocation" x="140.57971014492756" y="213.61607142857142"/>
+            <point key="canvasLocation" x="140.57971014492756" y="227.67857142857142"/>
         </tableViewCell>
     </objects>
     <resources>
